<resources>
    <string name="app_name">gpshelp</string>
    <string name="profile">ПРОФИЛЬ</string>
    <string name="map">КАРТА</string>
    <string name="about">О ПРИЛОЖЕНИИ</string>
    <string name="main">ГЛАВНАЯ</string>
    <string name="settings">НАСТРОЙКИ</string>
    <string name="email">ЭЛ.ПОЧТА</string>
    <string name="password">ПАРОЛЬ</string>
    <string name="login">ВХОД</string>
    <string name="register">РЕГИСТРАЦИЯ</string>
    <string name="click_to_login">ВОЙТИ</string>
    <string name="click_to_register">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="back">НАЗАД</string>
    <string name="surname">ФАМИЛИЯ</string>
    <string name="name">ИМЯ</string>
    <string name="fname">ОТЧЕСТВО</string>
    <string name="passport">ПАСПОРТ</string>
    <string name="birthdate">ДАТА РОЖДЕНИЯ</string>
    <string name="snils">СНИЛС</string>
    <string name="liveplace">МЕСТО ПОСТОЯННОЙ ПРОПИСКИ</string>
    <string name="workplace">АДРЕС ДИСПЕТЧЕРСКОГО ПУНКТА</string>
    <string name="notalldata">Не все поля заполнены</string>
    <string name="abouttext">Приложение позволяет принимать вызовы, которые отображаются на главном окне в виде списка с возможностью изучения всей содержащейся информации. Пользователю (диспетчеру) необходимо ввести требуемые от программы данные для успешной регистрации и получению доступа к вызовам. Ответственность за приём и передачи информации о вызове необходимым службам возлагается на диспетчере.</string>
    <string name="themes">Светлый/Тёмный фон</string>
    <string name="push">Push-уведомления</string>
    <string name="call_address">Адрес :</string>
    <string name="call_info">Инфо. :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">ПОДРОБНЕЕ</string>
    <string name="delete">УДАЛИТЬ</string>
</resources>