<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="72sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/b_profile"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/profile"
            android:insetTop="0sp"
            android:insetBottom="0sp"
            app:cornerRadius="0sp"
            app:strokeColor="@color/black"
            app:strokeWidth="1sp" />

        <Button
            android:id="@+id/b_map"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetTop="0sp"
            android:insetBottom="0sp"
            android:text="@string/main"
            app:cornerRadius="0sp"
            app:strokeColor="@color/black"
            app:strokeWidth="1sp" />

        <Button
            android:id="@+id/b_about"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/about"
            android:insetTop="0sp"
            android:insetBottom="0sp"
            app:cornerRadius="0sp"
            app:strokeColor="@color/black"
            app:strokeWidth="1sp" />
    </LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="400dp"
        android:layout_height="571dp"
        android:contentDescription="@string/map"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>